--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,11 @@
 <resources>
     <string name="app_name">price_calculator</string>
-    <string name="label_price">Price</string>
-    <string name="label_volume">Volume</string>
-    <string name="button_calculate">Calculate</string>
-    <string name="label_result">Result:</string>
-    <string name="button_compare">Compare</string>
-    <string name="label_comparison_table">Comparison Table:</string>
+    <string name="label_price">Цена</string>
+    <string name="label_volume">Объём</string>
+    <string name="button_calculate">Рассчитать</string>
+    <string name="button_add_to_compare">Добавить для сравнения</string>
+    <string name="label_comparison_table">Таблица сравнения:</string>
+    <string name="column_price">Цена</string>
+    <string name="column_volume">Объём</string>
+    <string name="column_compare">Сравнение</string>
 </resources>
