--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1,8 +1,9 @@
 <resources>
     <string name="app_name">price_calculator</string>
+    <string name="info_text">Specify the price and volume indicated on the product</string>
     <string name="label_price">Price</string>
     <string name="label_volume">Volume</string>
-    <string name="button_calculate">Calculate</string>
+    <string name="button_calculate">Calculate per kilo</string>
     <string name="button_add_to_compare">Add to Compare</string>
     <string name="label_comparison_table">Comparison Table:</string>
     <string name="column_price">Price</string>
